--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-gradio>=4.0.0
+gradio>=4.19.2
 numpy>=1.21.0
 pandas>=1.3.0
 requests>=2.31.0
 tqdm>=4.66.1
 scikit-learn>=1.0.0
 datasets>=2.17.0
-mistralai>=0.0.12
-python-dotenv>=1.0.0 
+python-dotenv>=1.0.1
+langchain>=0.1.9
+langchain-core>=0.1.27
+langchain-mistralai>=0.0.5 
