--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-gradio>=4.19.2
+flask==2.0.1
 numpy>=1.21.0
 pandas>=1.3.0
+scipy>=1.7.1
+rapidfuzz>=3.0.0
 requests>=2.31.0
 tqdm>=4.66.1
 scikit-learn>=1.0.0
@@ -8,4 +10,5 @@ datasets>=2.17.0
 python-dotenv>=1.0.1
 langchain>=0.1.9
 langchain-core>=0.1.27
-langchain-mistralai>=0.0.5 
+langchain-mistralai>=0.0.5
+gradio>=4.19.2 
